create dataloaders functionality implemented

--- a/preprocess_dataset.ipynb
+++ b/preprocess_dataset.ipynb
@@ -252,8 +252,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "id": "6d024dc5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('Example 3 The line $l$ passes through a fixed point $P(a, b)$ in the first quadrant and intersects the positive halves of the two coordinate axes at points $A, B$ respectively. Find the minimum value of the line segment $|A B|$.\\n\\n untranslated text remains the same as the source, only the example has been translated.',\n",
+       " np.int64(1))"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "from pathlib import Path\n",
+    "preprocessed_path = Path('/home/omni/Programming/Qwen2.5-Math-Classifier/dataset/preprocessed/train.csv')\n",
+    "df = pd.read_csv(preprocessed_path)\n",
+    "df['prompt'][0], df['label'][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "0d6b7d07",
+   "id": "822aca21",
    "metadata": {},
    "outputs": [],
    "source": []
